# planqk-buildpacks

./: .gitignore  README.md  buildpack.yml  docs.md  docs_update.md  pyproject.toml
basic_interactive/: Procfile  README.md  server.py
builders/conda/: enviroment.yml
builders/pip/: requirements.txt
builders/pip/web_app/: webapp.py
builders/planqk-base/: README.md  builder.toml
builders/poetry/pandas_app/pandas_app/: pandas_app.py
conda/sample/: enviroment.yml  sample.json  sample_conda.py
conda/sample/templates/: index.html
job-template-buildpack/: README.md  buildpack.toml  package.toml
pip/sample/: Procfile  sample.py
pip/webapp/: README.md
planqk-base/: README.md  builder.toml  buildpack.toml
samples/conda/sample/: Procfile  environment.yml
samples/pip/sample/: Procfile
samples/pip/webapp/: requirements.txt
samples/poetry/sampl1_1/: app.py  pyproject.toml
samples/poetry/sampl1_1/templates/: index.html
samples/user_code/: README.md  planqk.json  requirements.txt
samples/user_code/src/: program.py
