name = "test_package"

version = "0.1.0"

description = "Testcases for a Python Buildpack usuage. Using Paketo Buildpacks"

license = "Proprietary"

authors = [
    "Robert Brennenstuhl <robert.Brennenstuhl@anaqor.io>"
]

maintainers = [
    "John Smith <johnsmith@example.org>",
    "Jane Smith <janesmith@example.org>",
]

[tool.poetry]
# ...
readme = "README.md"

# repository = ""